<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pabloguevara.ct.MompoxFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        style = "@style/linearLayoutStyle">
        <TextView
            style = "@style/textViewStyle.Title"
            android:text="@string/bar1"/>
        <TextView
            style = "@style/textViewStyle.Content"
            android:text="@string/descbar1"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/mompox"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton"
            android:layout_gravity="center"
            android:id="@+id/bMompox"/>


    </LinearLayout>

</FrameLayout>
